force-app/main/default/objects/Medical_Appointment__c/fields/Appointment_Name__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Name__c</fullName>
    <description>Custom_Name for AppointmentNameTrigger</description>
    <label>Appointment Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>