force-app/main/default/objects/Medical_Appointment__c/fields/Medical_Facility__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Medical Facility where the Medical Appointment will take place</description>
    <label>Medical Facility</label>
    <referenceTo>Medical_Facility__c</referenceTo>
    <relationshipLabel>Medical Appointments</relationshipLabel>
    <relationshipName>Medical_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>