force-app/main/default/objects/Medical_Appointment__c/recordTypes/On_site.recordType-meta.xml
<RecordType>
    <fullName>On_site</fullName>
    <active>true</active>
    <label>On site</label>
</RecordType>