force-app/main/default/objects/Medical_Appointment__c/listViews/Medical_Appointments.listView-meta.xml
<ListView>
    <fullName>Medical_Appointments</fullName>
    <columns>Appointment_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Medical Appointments</label>
</ListView>